crates/paigasus-helikon-providers-bedrock/src/translate/snapshots/paigasus_helikon_providers_bedrock__translate__tests__snap_inference_config_temperature_top_p_max_tokens.snap
---
source: crates/paigasus-helikon-providers-bedrock/src/translate/mod.rs
expression: to_wire_json(&p)
---
{
  "inferenceConfig": {
    "maxTokens": 256,
    "temperature": 0.699999988079071,
    "topP": 0.8999999761581421
  },
  "messages": [
    {
      "content": [
        {
          "text": "hi"
        }
      ],
      "role": "user"
    }
  ],
  "modelId": "anthropic.claude-3-5-sonnet-20241022-v2:0",
  "synthesizing": false,
  "system": [],
  "toolConfig": null
}
