crates/paigasus-helikon-providers-bedrock/src/translate/snapshots/paigasus_helikon_providers_bedrock__translate__tests__snap_plain_text_turn.snap
---
source: crates/paigasus-helikon-providers-bedrock/src/translate/mod.rs
expression: to_wire_json(&p)
---
{
  "inferenceConfig": null,
  "messages": [
    {
      "content": [
        {
          "text": "hello"
        }
      ],
      "role": "user"
    }
  ],
  "modelId": "anthropic.claude-3-5-sonnet-20241022-v2:0",
  "synthesizing": false,
  "system": [],
  "toolConfig": null
}
