crates/paigasus-helikon-providers-bedrock/src/translate/snapshots/paigasus_helikon_providers_bedrock__translate__tests__snap_tool_choice_required.snap
---
source: crates/paigasus-helikon-providers-bedrock/src/translate/mod.rs
expression: to_wire_json(&p)
---
{
  "inferenceConfig": null,
  "messages": [
    {
      "content": [
        {
          "text": "hi"
        }
      ],
      "role": "user"
    }
  ],
  "modelId": "anthropic.claude-3-5-sonnet-20241022-v2:0",
  "synthesizing": false,
  "system": [],
  "toolConfig": {
    "toolChoice": {
      "any": {}
    },
    "tools": [
      {
        "toolSpec": {
          "description": "Ping",
          "inputSchema": {
            "json": "<Document>"
          },
          "name": "ping"
        }
      }
    ]
  }
}
