crates/paigasus-helikon-providers-bedrock/src/translate/snapshots/paigasus_helikon_providers_bedrock__translate__tests__snap_tool_choice_specific_tool.snap
---
source: crates/paigasus-helikon-providers-bedrock/src/translate/mod.rs
expression: to_wire_json(&p)
---
{
  "inferenceConfig": {
    "maxTokens": 8192
  },
  "messages": [
    {
      "content": [
        {
          "text": "hi"
        }
      ],
      "role": "user"
    }
  ],
  "modelId": "anthropic.claude-3-5-sonnet-20241022-v2:0",
  "synthesizing": false,
  "system": [],
  "toolConfig": {
    "toolChoice": {
      "tool": {
        "name": "ping"
      }
    },
    "tools": [
      {
        "toolSpec": {
          "description": "Ping",
          "inputSchema": {
            "json": "<Document>"
          },
          "name": "ping"
        }
      }
    ]
  }
}
