crates/paigasus-helikon-providers-bedrock/src/translate/snapshots/paigasus_helikon_providers_bedrock__translate__tests__snap_unsupported_family_json_schema_degrades_to_no_synthesis.snap
---
source: crates/paigasus-helikon-providers-bedrock/src/translate/mod.rs
expression: wire
---
{
  "inferenceConfig": {
    "maxTokens": 8192
  },
  "messages": [
    {
      "content": [
        {
          "text": "classify this"
        }
      ],
      "role": "user"
    }
  ],
  "modelId": "meta.llama3-1-70b-instruct-v1:0",
  "synthesizing": false,
  "system": [],
  "toolConfig": null
}
